deploy/wiki/templates/wikijs-statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wikijs
spec:
  serviceName: wikijs
  replicas: 1
  selector:
    matchLabels:
      app: wikijs
  template:
    metadata:
      labels:
        app: wikijs
    spec:
      containers:
        - name: wikijs
          image: requarks/wiki:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              memory: 256Mi
